@@ -4,6 +4,7 @@ Revision history for Perl module TestRail::API
     - Fix issue where follow_post_redirect could not be passed to constructor
     - Add getRunResults, getRunResultsPaginated Methods in TestRail::API
     - Cache connections by default for speedups
+    - Cache getTests() for getTestByName()
 
 0.038 2017-01-23 TEODESIAN
     - Optimize TestRail::Utils::Find::getResults and testrail-results
